# gaffa

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  environment.yml  justfile  pyproject.toml
benchmarks/: cuda_dm_search_benchmark.cpp  dedispersion_cuda_benchmark.cpp  dedispersion_spectrum_cpu_benchmark.cpp  dm_search_benchmark.cpp  ffa_transform_benchmark.cpp  filterbank_read_benchmark.cpp  loki_dm_search_benchmark.cpp
env/: dev.sh
include/gaffa/: candidate.h  cuda_memory.h  dedispersion.h  dedispersion_cuda.h  dm_search.h  ffa.h  ffa_candidate.h  ffa_cuda.h  ffa_detection.h  ffa_executor.h  ffa_peak.h  ffa_plan.h  ffa_search.h  filterbank.h  filterbank_legacy.h  filterbank_view.h  folding.h  harmonic.h  launch_cuda.h  loki_pffa.h  peak_grouping.h  periodic_match.h  periodic_peak.h  preprocessing.h  preprocessing_cuda.h  sample_view.h  time_series.h  time_series_cuda.h  vector_add.hpp  vector_add_cuda.hpp
include/gaffa/internal/: dedispersion_delay.h
python/gaffa/: __init__.py  __init__.pyi  _core.pyi  _runtime.pyi  dedispersion.py  dedispersion.pyi  ffa.py  ffa.pyi  pfold.py  pfold.pyi
python/gaffa/dedispersion/: __init__.py  __init__.pyi  _bindings.pyi
python/gaffa/ffa/: __init__.py  __init__.pyi  _bindings.pyi
python/gaffa/io/: __init__.py  __init__.pyi  _bindings.pyi
python/gaffa/pfold/: __init__.py  __init__.pyi  _bindings.pyi
src/gaffa/: bindings.cpp  candidate.cpp  cuda_memory.cu  dedispersion.cpp  dedispersion_cuda.cu  dm_search.cpp  ffa.cpp  ffa_candidate.cpp  ffa_cuda.cu  ffa_cuda_executor.cuh  ffa_cuda_kernels.cuh  ffa_cuda_program.cuh  ffa_cuda_transform.cuh  ffa_detection.cpp  ffa_executor.cpp  ffa_peak.cpp  ffa_plan.cpp  ffa_search.cpp  filterbank_view.cpp  folding.cpp  harmonic.cpp  peak_grouping.cpp  periodic_match.cpp  periodic_peak.cpp  preprocessing.cpp  preprocessing_cuda.cu  time_series.cpp  time_series_cuda.cu  vector_add.cpp  vector_add.cu
src/gaffa/detail/: phase_trajectory_grid.h
src/gaffa/io/: filterbank.cpp  filterbank_legacy.cpp
src/gaffa/loki/: loki_pffa.cu  loki_pffa_plan.cpp
src/gaffa/python/: dedispersion_bindings.cpp  dedispersion_bindings.h  ffa_bindings.cpp  ffa_bindings.h  filterbank_bindings.cpp  filterbank_bindings.h  folding_bindings.cpp  folding_bindings.h
tests/: test_dedispersed_wrappers.py  test_dedispersion.py  test_demo.py  test_ffa.py  test_filterbank_io.py  test_pfold.py
tests/cpp/: test_candidate.cpp  test_cuda_memory.cpp  test_cuda_search_pipeline.cpp  test_dedispersion.cpp  test_dedispersion_cuda.cpp  test_dm_search.cpp  test_ffa.cpp  test_ffa_candidate.cpp  test_ffa_cuda.cpp  test_ffa_detection.cpp  test_ffa_executor.cpp  test_ffa_peak.cpp  test_ffa_plan.cpp  test_ffa_search.cpp  test_filterbank.cpp  test_filterbank_errors.cpp  test_filterbank_legacy.cpp  test_filterbank_view.cpp  test_folding.cpp  test_harmonic.cpp  test_peak_grouping.cpp  test_periodic_match.cpp  test_periodic_peak.cpp  test_preprocessing.cpp  test_preprocessing_cuda.cpp  test_time_series.cpp  test_time_series_cuda.cpp  test_vector_add.cpp
tests/cpp/support/: temp_file.h
tests/data/: basetest.fil
tests/loki/: test_loki_pffa.cpp  test_loki_smoke.cpp
tests/typecheck/: public_api.py
